--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!--top of the code start-->
    
     <header class="header">
-      <div class="container"> 
+      <div class="container header-container"> 
         <nav class="header-navigation">
           <a class="header-logo" href="./index.html"
             >Web<span class="heder-logo-span">Studio</span></a
