--- a/index.html
+++ b/index.html
@@ -28,31 +28,33 @@
           <a class="header-logo" href="./index.html"
             >Web<span class="heder-logo-span">Studio</span></a
           >
-          <ul class="header-menu">
-            <li class="header-menu-item">
-              <a class="header-menu-link" href="./index.html">Studio</a>
-            </li>
-            <li class="header-menu-item">
-              <a class="header-menu-link" href="">Portfolio</a>
-            </li>
-            <li class="header-menu-item">
-              <a class="header-menu-link" href="">Contacts</a>
-            </li>
-          </ul>
-        </nav>
-        <address class="header-adress">
-          <ul class="header-contacts">
-            <li class="header-contacts-item">
-              <a class="header-contacts-link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="header-contacts-item">
-              <a class="header-contacts-link" href="tel:+110001111111"
-                >+11 (000) 111-11-11</a
-              >
-            </li>
-          </ul>
+          <div class="header-container-menu">
+            <ul class="header-menu">
+              <li class="header-menu-item">
+                <a class="header-menu-link" href="./index.html">Studio</a>
+              </li>
+              <li class="header-menu-item">
+                <a class="header-menu-link" href="">Portfolio</a>
+              </li>
+              <li class="header-menu-item">
+                <a class="header-menu-link" href="">Contacts</a>
+              </li>
+            </ul>
+                    </nav>
+                    <address class="header-adress">
+            <ul class="header-contacts">
+              <li class="header-contacts-item">
+                <a class="header-contacts-link" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="header-contacts-item">
+                <a class="header-contacts-link" href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </div>
         </address>
       </div>
     </header>
