--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     <!--top of the code start-->
    
     <header class="header">
-      <div class="container header-container"> 
+      <div class="header-container"> 
         <nav class="header-navigation">
           <a class="header-logo" href="./index.html"
             >Web<span class="heder-logo-span">Studio</span></a
           >
-          <div class="header-container-menu">
+          
             <ul class="header-menu">
               <li class="header-menu-item">
                 <a class="header-menu-link" href="./index.html">Studio</a>
@@ -40,21 +40,21 @@
                 <a class="header-menu-link" href="">Contacts</a>
               </li>
             </ul>
-                    </nav>
-                    <address class="header-adress">
-            <ul class="header-contacts">
-              <li class="header-contacts-item">
-                <a class="header-contacts-link" href="mailto:info@devstudio.com"
-                  >info@devstudio.com</a
-                >
-              </li>
-              <li class="header-contacts-item">
-                <a class="header-contacts-link" href="tel:+110001111111"
-                  >+11 (000) 111-11-11</a
-                >
-              </li>
-            </ul>
-          </div>
+        </nav>
+        <address class="header-adress">
+          <ul class="header-contacts">
+            <li class="header-contacts-item">
+              <a class="header-contacts-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="header-contacts-item">
+              <a class="header-contacts-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </div>
         </address>
       </div>
     </header>
