--- a/index.html
+++ b/index.html
@@ -24,22 +24,24 @@
    
     <header class="header">
       <div class="header-container"> 
-        <nav class="header-navigation">
-          <a class="header-logo" href="./index.html"
-            >Web<span class="heder-logo-span">Studio</span></a
-          >
-            <ul class="header-menu">
-              <li class="header-menu-item">
-                <a class="header-menu-link" href="./index.html">Studio</a>
-              </li>
-              <li class="header-menu-item">
-                <a class="header-menu-link" href="">Portfolio</a>
-              </li>
-              <li class="header-menu-item">
-                <a class="header-menu-link" href="">Contacts</a>
-              </li>
-            </ul>
-        </nav>
+        <div class="container-navigation">
+          <nav class="header-navigation">
+            <a class="header-logo" href="./index.html"
+              >Web<span class="heder-logo-span">Studio</span></a
+            >
+              <ul class="header-menu">
+                <li class="header-menu-item">
+                  <a class="header-menu-link" href="./index.html">Studio</a>
+                </li>
+                <li class="header-menu-item">
+                  <a class="header-menu-link" href="">Portfolio</a>
+                </li>
+                <li class="header-menu-item">
+                  <a class="header-menu-link" href="">Contacts</a>
+                </li>
+              </ul>
+          </nav>
+        </div>
         <address class="header-adress">
           <ul class="header-contacts">
             <li class="header-contacts-item">
