--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="header-container"> 
         <nav class="header-navigation">
           <a class="header-logo" href="./index.html"
-            >Web<span class="heder-logo-span">Studio</span></a
+            >Web<span class="header-logo-span">Studio</span></a
           >
             <ul class="header-menu">
               <li class="header-menu-item">
@@ -40,7 +40,7 @@
               </li>
             </ul>
         </nav>
-        <address class="header-adress">
+        <address class="header-address">
           <ul class="header-contacts">
             <li class="header-contacts-item">
               <a class="header-contacts-link" href="mailto:info@devstudio.com"
