--- a/index.html
+++ b/index.html
@@ -41,17 +41,21 @@
             </ul>
         </nav>
         <address class="header-address">
-          <ul class="header-contacts">
+          <ul class="header-contact">
             <li class="header-contacts-item">
-              <a class="header-contacts-link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
+              <div class="container-contacts">
+                <a class="header-contacts-link" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </div>
             </li>
-            <li class="header-contacts-item">
-              <a class="header-contacts-link" href="tel:+110001111111"
-                >+11 (000) 111-11-11</a
-              >
-            </li>
+            <div class="container-contact">
+              <li class="header-contacts-item">
+                <a class="header-contacts-link" href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </div>
           </ul>
         </address>
       </div>
