--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </ul>
         </nav>
         <address class="header-address">
-          <ul class="header-contact">
+          <ul class="header-contacts">
             <li class="header-contacts-item">
                 <a class="header-contacts-link" href="mailto:info@devstudio.com"
                   >info@devstudio.com</a
