--- a/index.html
+++ b/index.html
@@ -62,8 +62,10 @@
     <!-- Basic content start-->
     <main>
         <section class="section">
-          <h1 class="section-title">Effective Solutions for Your Business</h1>
-          <button class="section-button" type="button">Order Service</button>
+          <div class="container">
+            <h1 class="section-title">Effective Solutions for Your Business</h1>
+            <button class="section-button" type="button">Order Service</button>
+          </div>
         </section>
       <div class="container">
         <section class="section-advantages">
