--- a/index.html
+++ b/index.html
@@ -101,49 +101,51 @@
           </ul>
         </section>
         <section class="team">
-          <h2 class="team-title">Our Team</h2>
-          <ul class="team-list">
-            <li class="team-item">
-              <img
-                class="team-item-img"
-                src="./images/img_1.jpg"
-                alt="Mark Guerrero"
-                width="264"
-              />
-              <h3 class="team-item-title">Mark Guerrero</h3>
-              <p class="team-item-text">Product Designer</p>
-            </li>
-            <li class="team-item">
-              <img
-                class="team-item-img"
-                src="./images/img_2.jpg"
-                alt="Tom Ford"
-                width="264"
-              />
-              <h3 class="team-item-title">Tom Ford</h3>
-              <p class="team-item-text">Frontend Developer</p>
-            </li>
-            <li class="team-item">
-              <img
-                class="team-item-img"
-                src="./images/img_3.jpg"
-                alt="Camila Garcia"
-                width="264"
-              />
-              <h3 class="team-item-title">Camila Garcia</h3>
-              <p class="team-item-text">Marketing</p>
-            </li>
-            <li class="team-item">
-              <img
-                class="team-item-img"
-                src="./images/img_4.jpg"
-                alt="Daniel Wilson"
-                width="264"
-              />
-              <h3 class="team-item-title">Daniel Wilson</h3>
-              <p class="team-item-text">UI Designer</p>
-            </li>
-          </ul>
+          <div class="container">
+            <h2 class="team-title">Our Team</h2>
+            <ul class="team-list">
+              <li class="team-item">
+                <img
+                  class="team-item-img"
+                  src="./images/img_1.jpg"
+                  alt="Mark Guerrero"
+                  width="264"
+                />
+                <h3 class="team-item-title">Mark Guerrero</h3>
+                <p class="team-item-text">Product Designer</p>
+              </li>
+              <li class="team-item">
+                <img
+                  class="team-item-img"
+                  src="./images/img_2.jpg"
+                  alt="Tom Ford"
+                  width="264"
+                />
+                <h3 class="team-item-title">Tom Ford</h3>
+                <p class="team-item-text">Frontend Developer</p>
+              </li>
+              <li class="team-item">
+                <img
+                  class="team-item-img"
+                  src="./images/img_3.jpg"
+                  alt="Camila Garcia"
+                  width="264"
+                />
+                <h3 class="team-item-title">Camila Garcia</h3>
+                <p class="team-item-text">Marketing</p>
+              </li>
+              <li class="team-item">
+                <img
+                  class="team-item-img"
+                  src="./images/img_4.jpg"
+                  alt="Daniel Wilson"
+                  width="264"
+                />
+                <h3 class="team-item-title">Daniel Wilson</h3>
+                <p class="team-item-text">UI Designer</p>
+              </li>
+            </ul>
+          </div>
           </section>
                 <section class="portfolio">
           <h2 class="portfolio-title">Our Portfolio</h2>
