--- a/index.html
+++ b/index.html
@@ -100,21 +100,24 @@
             </li>
           </ul>
         </section>
+
         <section class="team">
-          <div class="container">
             <h2 class="team-title">Our Team</h2>
-          </div>
+            <div class="container">
             <ul class="team-list">
-              <li class="team-item">
-                <img
-                  class="team-item-img"
-                  src="./images/img_1.jpg"
-                  alt="Mark Guerrero"
-                  width="264"
-                />
-                <h3 class="team-item-title">Mark Guerrero</h3>
-                <p class="team-item-text">Product Designer</p>
-              </li>
+              <div class="team-item-one">
+                <li class="team-item">
+                  <img
+                    class="team-item-img"
+                    src="./images/img_1.jpg"
+                    alt="Mark Guerrero"
+                    width="264"
+                  />
+                  <h3 class="team-item-title">Mark Guerrero</h3>
+                  <p class="team-item-text">Product Designer</p>
+                </li>
+              </div>
+              <div class="team-item-two">
               <li class="team-item">
                 <img
                   class="team-item-img"
@@ -124,6 +127,7 @@
                 />
                 <h3 class="team-item-title">Tom Ford</h3>
                 <p class="team-item-text">Frontend Developer</p>
+              </div>
               </li>
               <li class="team-item">
                 <img
@@ -146,6 +150,7 @@
                 <p class="team-item-text">UI Designer</p>
               </li>
             </ul>
+          </div>
           </section>
                 <section class="portfolio">
           <h2 class="portfolio-title">Our Portfolio</h2>
