--- a/index.html
+++ b/index.html
@@ -61,46 +61,50 @@
 
     <!-- Basic content start-->
     <main>
+      <!-- SECTION ONE -->
         <section class="section">
           <div class="container">
             <h1 class="section-title">Effective Solutions for Your Business</h1>
             <button class="section-button" type="button">Order Service</button>
           </div>
         </section>
+      <!-- SECTION TWO -->
         <section class="section-advantages">
-          <h2 class="section-advantages-title visually-hidden">Our advantages</h2>
-          <ul class="section-advantages-list">
-            <li class="section-advantages-item">
-              <h3 class="advantages-list-title">Strategy</h3>
-              <p class="advantages-list-text">
-                Our goal is to identify the business problem to walk away with the
-                perfect and creative solution.
-              </p>
-            </li>
-            <li class="section-advantages-item">
-              <h3 class="advantages-list-title">Punctuality</h3>
-              <p class="advantages-list-text">
-                Bring the key message to the brand's audience for the best price
-                within the shortest possible time.
-              </p>
-            </li>
-            <li class="section-advantages-item">
-              <h3 class="advantages-list-title">Diligence</h3>
-              <p class="advantages-list-text">
-                Research and confirm brands that present the strongest digital
-                growth opportunities and minimize risk.
-              </p>
-            </li>
-            <li class="section-advantages-item">
-              <h3 class="advantages-list-title">Technologies</h3>
-              <p class="advantages-list-text">
-                Design practice focused on digital experiences. We bring forth a
-                deep passion for problem-solving.
-              </p>
-            </li>
-          </ul>
+          <div class="container">
+            <h2 class="section-advantages-title visually-hidden">Our advantages</h2>
+            <ul class="section-advantages-list">
+              <li class="section-advantages-item">
+                <h3 class="advantages-list-title">Strategy</h3>
+                <p class="advantages-list-text">
+                  Our goal is to identify the business problem to walk away with the
+                  perfect and creative solution.
+                </p>
+              </li>
+              <li class="section-advantages-item">
+                <h3 class="advantages-list-title">Punctuality</h3>
+                <p class="advantages-list-text">
+                  Bring the key message to the brand's audience for the best price
+                  within the shortest possible time.
+                </p>
+              </li>
+              <li class="section-advantages-item">
+                <h3 class="advantages-list-title">Diligence</h3>
+                <p class="advantages-list-text">
+                  Research and confirm brands that present the strongest digital
+                  growth opportunities and minimize risk.
+                </p>
+              </li>
+              <li class="section-advantages-item">
+                <h3 class="advantages-list-title">Technologies</h3>
+                <p class="advantages-list-text">
+                  Design practice focused on digital experiences. We bring forth a
+                  deep passion for problem-solving.
+                </p>
+              </li>
+            </ul>
+          </div>
         </section>
-
+        <!-- SECTION THREE -->
         <section class="team">
             <h2 class="team-title">Our Team</h2>
             <div class="container">
@@ -148,7 +152,8 @@
             </ul>
           </div>
           </section>
-                <section class="portfolio">
+          <!-- SECTION FOUR -->
+          <section class="portfolio">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
