--- a/index.html
+++ b/index.html
@@ -116,8 +116,10 @@
                     alt="Mark Guerrero"
                     width="264"
                   />
-                  <h3 class="team-item-title">Mark Guerrero</h3>
-                  <p class="team-item-text">Product Designer</p>
+                  <div class="item-container">
+                    <h3 class="team-item-title">Mark Guerrero</h3>
+                    <p class="team-item-text">Product Designer</p>
+                  </div>
                 </li>
               <li class="team-item">
                 <img
