--- a/index.html
+++ b/index.html
@@ -128,8 +128,10 @@
                   alt="Tom Ford"
                   width="264"
                 />
-                <h3 class="team-item-title">Tom Ford</h3>
-                <p class="team-item-text">Frontend Developer</p>
+                <div class="item-container">
+                  <h3 class="team-item-title">Tom Ford</h3>
+                  <p class="team-item-text">Frontend Developer</p>
+                </div>
               </li>
               <li class="team-item">
                 <img
@@ -138,8 +140,10 @@
                   alt="Camila Garcia"
                   width="264"
                 />
-                <h3 class="team-item-title">Camila Garcia</h3>
-                <p class="team-item-text">Marketing</p>
+                <div class="container">
+                  <h3 class="team-item-title">Camila Garcia</h3>
+                  <p class="team-item-text">Marketing</p>
+                </div>
               </li>
               <li class="team-item">
                 <img
@@ -148,8 +152,10 @@
                   alt="Daniel Wilson"
                   width="264"
                 />
-                <h3 class="team-item-title">Daniel Wilson</h3>
-                <p class="team-item-text">UI Designer</p>
+                <div class="item-container">
+                  <h3 class="team-item-title">Daniel Wilson</h3>
+                  <p class="team-item-text">UI Designer</p>
+                </div>
               </li>
             </ul>
           </div>
