--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </ul>
           </div>
         </section>
-        <!-- SECTION THREE -->
+      <!-- SECTION THREE -->
         <section class="team">
             <div class="container">
               <h2 class="team-title">Our Team</h2>
@@ -140,7 +140,7 @@
                   alt="Camila Garcia"
                   width="264"
                 />
-                <div class="container">
+                <div class="item-container">
                   <h3 class="team-item-title">Camila Garcia</h3>
                   <p class="team-item-text">Marketing</p>
                 </div>
@@ -159,87 +159,101 @@
               </li>
             </ul>
           </div>
-          </section>
-          <!-- SECTION FOUR -->
-          <section class="portfolio">
-          <h2 class="portfolio-title">Our Portfolio</h2>
-          <ul class="portfolio-list">
-            <li class="portfolio-item">
-              <img
-                class="portfolio-item-img"
-                src="./images/portfolio_1.jpg"
-                alt="Banking App"
-                width="360"
-              />
-              <h3 class="portfolio-item-title">Banking App</h3>
-              <p class="portfolio-item-text">App</p>
-            </li>
-            <li class="portfolio-item">
-              <img
-                class="portfolio-item-img"
-                src="./images/portfolio_2.jpg"
-                alt="Cashless Payment"
-                width="360"
-              />
-              <h3 class="portfolio-item-title">Cashless Payment</h3>
-              <p class="portfolio-item-text">Marketing</p>
-            </li>
-            <li class="portfolio-item">
-              <img
-                class="portfolio-item-img"
-                src="./images/portfolio_3.jpg"
-                alt="Meditation App"
-                width="360"
-              />
-              <h3 class="portfolio-item-title">Meditation App</h3>
-              <p class="portfolio-item-text">App</p>
-            </li>
-            <li class="portfolio-item">
-              <img
-                class="portfolio-item-img"
-                src="./images/portfolio_4.jpg"
-                alt="Taxi Service"
-                width="360"
-              />
-              <h3 class="portfolio-item-title">Taxi Service</h3>
-              <p class="portfolio-item-text">Marketing</p>
-            </li>
-            <li class="portfolio-item">
-              <img
-                class="portfolio-item-img"
-                src="./images/portfolio_5.jpg"
-                alt="Screen Illustrations"
-                width="360"
-              />
-              <h3 class="portfolio-item-title">Screen Illustrations</h3>
-              <p class="portfolio-item-text">Design</p>
-            </li>
-            <li class="portfolio-item">
-              <img
-                class="portfolio-item-img"
-                src="./images/portfolio_6.jpg"
-                alt="Online Courses"
-                width="360"
-              />
-              <h3 class="portfolio-item-title">Online Courses</h3>
-              <p class="portfolio-item-text">Marketing</p>
-            </li>
-          </ul>
-                </section>
+        </section>
+      <!-- SECTION FOUR -->
+        <section class="portfolio">
+          <div class="container">
+            <h2 class="portfolio-title">Our Portfolio</h2>
+            <ul class="portfolio-list">
+              <li class="portfolio-item">
+                <img
+                  class="portfolio-item-img"
+                  src="./images/portfolio_1.jpg"
+                  alt="Banking App"
+                  width="360"
+                />
+                <div class="portfolio-item-container">
+                  <h3 class="portfolio-item-title">Banking App</h3>
+                  <p class="portfolio-item-text">App</p>
+                </div>
+              </li>
+              <li class="portfolio-item">
+                <img
+                  class="portfolio-item-img"
+                  src="./images/portfolio_2.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                />
+                <div class="portfolio-item-container">
+                  <h3 class="portfolio-item-title">Cashless Payment</h3>
+                  <p class="portfolio-item-text">Marketing</p>
+                </div>
+              </li>
+              <li class="portfolio-item">
+                <img
+                  class="portfolio-item-img"
+                  src="./images/portfolio_3.jpg"
+                  alt="Meditation App"
+                  width="360"
+                />
+                <div class="portfolio-item-container">
+                  <h3 class="portfolio-item-title">Meditation App</h3>
+                  <p class="portfolio-item-text">App</p>
+                </div>
+              </li>
+              <li class="portfolio-item">
+                <img
+                  class="portfolio-item-img"
+                  src="./images/portfolio_4.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                />
+                <div class="portfolio-item-container">
+                  <h3 class="portfolio-item-title">Taxi Service</h3>
+                  <p class="portfolio-item-text">Marketing</p>
+                </div>
+              </li>
+              <li class="portfolio-item">
+                <img
+                  class="portfolio-item-img"
+                  src="./images/portfolio_5.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                />
+                <div class="portfolio-item-container">
+                  <h3 class="portfolio-item-title">Screen Illustrations</h3>
+                  <p class="portfolio-item-text">Design</p>
+                </div>
+              </li>
+              <li class="portfolio-item">
+                <img
+                  class="portfolio-item-img"
+                  src="./images/portfolio_6.jpg"
+                  alt="Online Courses"
+                  width="360"
+                />
+                <div class="portfolio-item-container">
+                  <h3 class="portfolio-item-title">Online Courses</h3>
+                  <p class="portfolio-item-text">Marketing</p>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </section>
     </main>
     <!-- Basic content end-->
     <!-- lower part start-->
-    <div class="container">
       <footer class="footer">
-        <a class="footer-logo" href="./index.html"
+        <div class="container">
+          <a class="footer-logo" href="./index.html"
           >Web<span class="footer-logo-span">Studio</span></a
-        >
-        <p class="footer-text">
+          >
+          <p class="footer-text">
           Increase the flow of customers and sales for your business with digital
           marketing & growth solutions.
-        </p>
+          </p>
+        </div>
       </footer>
-    </div>
     <!-- lower part end-->
   </body>
 </html>
