--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <!-- SECTION TWO -->
         <section class="section-advantages">
           <div class="container">
-            <h2 class="section-advantages-title visually-hidden">Our advantages</h2>
+            <h2 class="visually-hidden">Our advantages</h2>
             <ul class="section-advantages-list">
               <li class="section-advantages-item">
                 <h3 class="advantages-list-title">Strategy</h3>
