--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
     <!-- lower part start-->
       <footer class="footer">
         <div class="container">
-          <a class="footer-logo" href="./index.html">Web<span class="footer-logo-span">Studio</span></a>
+          <div class="footer-logo-container"><a class="footer-logo" href="./index.html">Web<span class="footer-logo-span">Studio</span></a></div>
           <p class="footer-text">
           Increase the flow of customers and sales for your business with digital
           marketing & growth solutions.
