--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       crossorigin="anonymous" 
       referrerpolicy="no-referrer" />
       <link rel="stylesheet" href="./css/style.css" />
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" 
+rel="stylesheet">
   </head>
   <body>
     <!--top of the code start-->
@@ -163,6 +167,7 @@
                   src="./images/portfolio_1.jpg"
                   alt="Banking App"
                   width="360"
+                  height="300"
                 />
                 <div class="portfolio-item-container">
                   <h3 class="portfolio-item-title">Banking App</h3>
@@ -175,6 +180,7 @@
                   src="./images/portfolio_2.jpg"
                   alt="Cashless Payment"
                   width="360"
+                  height="300"
                 />
                 <div class="portfolio-item-container">
                   <h3 class="portfolio-item-title">Cashless Payment</h3>
@@ -187,6 +193,7 @@
                   src="./images/portfolio_3.jpg"
                   alt="Meditation App"
                   width="360"
+                  height="300"
                 />
                 <div class="portfolio-item-container">
                   <h3 class="portfolio-item-title">Meditation App</h3>
@@ -199,6 +206,7 @@
                   src="./images/portfolio_4.jpg"
                   alt="Taxi Service"
                   width="360"
+                  height="300"
                 />
                 <div class="portfolio-item-container">
                   <h3 class="portfolio-item-title">Taxi Service</h3>
@@ -211,6 +219,7 @@
                   src="./images/portfolio_5.jpg"
                   alt="Screen Illustrations"
                   width="360"
+                  height="300"
                 />
                 <div class="portfolio-item-container">
                   <h3 class="portfolio-item-title">Screen Illustrations</h3>
@@ -223,6 +232,7 @@
                   src="./images/portfolio_6.jpg"
                   alt="Online Courses"
                   width="360"
+                  height="300"
                 />
                 <div class="portfolio-item-container">
                   <h3 class="portfolio-item-title">Online Courses</h3>
